为application.properties添加了MyBatis-plus配置信息 为pom.xml添加了MyBatis-plus依赖

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
+<!--        Mybatis-plus 依赖-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
